--- a/qof/debian/rules
+++ b/qof/debian/rules
@@ -23,3 +23,4 @@ include /usr/share/cdbs/1/rules/simple-patchsys.mk
 
 DEB_MAKE_CHECK_TARGET = check
 
+DEB_CONFIGURE_EXTRA_FLAGS += --enable-sqlite
