--- a/qof/emdebian/control
+++ b/qof/emdebian/control
@@ -1,15 +1,16 @@
 Source: qof
+Section: libs
 Priority: optional
 Maintainer: Debian QOF packaging team <pkg-qof-maintainers@lists.alioth.debian.org>
 Uploaders: Goedson Teixeira Paixao <goedson@debian.org>, Neil Williams <linux@codehelp.co.uk>
-Build-Depends: debhelper (>= 5), cdbs, autotools-dev, libglib2.0-dev, libxml2-dev (>= 2.5.10), binutils (>= 2.14.90.0.7), libgda2-dev, libxml-parser-perl, doxygen
+Build-Depends: debhelper (>= 5), cdbs, autotools-dev, libglib2.0-dev, libxml-parser-perl, doxygen, libsqlite0-dev
 Standards-Version: 3.7.2
 
 Package: libqof-dev
 Priority: optional
 Section: libdevel
 Architecture: any
-Depends: libqof1 (= ${Source-Version}), libgda2-dev
+Depends: libqof1 (= ${Source-Version})
 Description: Query Object Framework - development
  A framework to allow the execution of SQL-type queries
  using collections of in-memory objects as 'tables'.
@@ -34,3 +35,18 @@ Description: Query Object Framework
  .
   Homepage: http://qof.sourceforge.net/
 
+Package: libqof-backend-sqlite0
+Priority: extra
+Section: libs
+Architecture: any
+Depends: libqof1 (= ${Source-Version}), libsqlite0
+Description: Query Object Framework - SQLite backend module
+ QOF is a framework to allow the execution of SQL-type 
+ queries using collections of in-memory objects as 'tables'.
+ .
+ This module provides a SQLite backend intended for
+ embedded systems where the size of the QSF XML backend
+ is a problem. The package can also be installed alongside 
+ the default QSF XML backend.
+ .
+  Homepage: http://qof.sourceforge.net/
