--- a/qof/configure.in
+++ b/qof/configure.in
@@ -187,7 +187,7 @@ AC_ARG_ENABLE(deprecated-glib,
 
 dnl **************************************************************
 dnl Embedded systems only use the QofSQLite backend.
-dnl libxml2 and sqlite for host systems.
+dnl libxml2 and optional sqlite for host systems.
 dnl libxml2 v2.5.10 is required for QSF (backend/file)
 dnl **************************************************************
 
@@ -206,18 +206,36 @@ if test "$embedded" = "yes"; then
 	AC_SUBST(sqlite_CFLAGS)
 	backend="sqlite"
 else
-	PKG_CHECK_MODULES(sqlite, sqlite >= 2.8.0)
-	AC_SUBST(sqlite_LIBS)
-	AC_SUBST(sqlite_CFLAGS)
 	LIBXML2_REQUIRED=2.5.10
 	PKG_CHECK_MODULES(LIBXML2, libxml-2.0 >= $LIBXML2_REQUIRED)
 	LIBXML_VERSION=`xml2-config --version`
 	AC_SUBST(LIBXML2_CFLAGS)
 	AC_SUBST(LIBXML2_LIBS)
-	backend="libxml2 == $LIBXML_VERSION, sqlite"
+	backend="libxml2 == $LIBXML_VERSION"
 fi
 
 AM_CONDITIONAL(EMBEDDED, [test "$embedded" = "yes"])
+
+AC_ARG_ENABLE(sqlite,
+  [  --enable-sqlite           Enable the SQLite backend module
+                          alongside the QSF XML backend. (no)],
+  [case "${enableval}" in
+  		no) sqlite="no" ;;
+		yes) sqlite="yes" ;;
+		*) AC_MSG_ERROR(bad value ${enableval} for --enable-sqlite) ;;
+		esac])
+
+if test "$embedded" != "yes"; then
+	if test "$sqlite" = "yes"; then
+		PKG_CHECK_MODULES(sqlite, sqlite >= 2.8.0)
+		AC_SUBST(sqlite_LIBS)
+		AC_SUBST(sqlite_CFLAGS)
+		backend2="sqlite"
+	fi
+fi
+
+AM_CONDITIONAL(QSQANDQSF, [test "$sqlite" = "yes"])
+AM_CONDITIONAL(QSQANDQSF, [test "$embedded" != "yes"])
 
 dnl **************************************************************
 dnl If DWI is found on the build system, then build with it.
@@ -271,7 +289,7 @@ fi
 AC_SUBST(PERL)
 
 # check for doxygen, mostly stolen from http://log4cpp.sourceforge.net/
-# ----------------------------------------------------------------------------
+# ------------------------------------------------------------------
 AC_DEFUN([BB_ENABLE_DOXYGEN],
 [
 AC_ARG_ENABLE(doxygen, [  --enable-doxygen        enable documentation generation with doxygen (auto)])
@@ -310,7 +328,7 @@ AC_SUBST(enable_latex_docs)
 
 # check for doxygen
 BB_ENABLE_DOXYGEN
-# ----------------------------------------------------------------------------
+# ----------------------------------------------------------------
 
 dnl *************************************
 dnl Extra warnings
@@ -446,7 +464,8 @@ echo "LDFLAGS     :   $LDFLAGS"
 echo "QOF_CFLAGS  :   "`eval echo $QOF_CFLAGS`
 echo "QOF_LIBS    :   $QOF_LIBS"
 echo "DWI_LIBS    :   $DWI_LIBS"
-echo "Backend     :   $backend"
+echo "1st backend :   $backend"
+echo "2nd backend :   $backend2"
 echo "LIBGDA      :   $GDA_VERSION"
 echo "prefix      :   $prefix"
 echo "data dir    :   "`eval echo $DATADIR`
