--- a/qof/debian/control
+++ b/qof/debian/control
@@ -36,7 +36,7 @@ Description: Query Object Framework
  Homepage: http://qof.sourceforge.net/
 
 Package: libqof-backend-qsf0
-Priority: extra
+Priority: optional
 Section: libs
 Architecture: any
 Depends: libqof1 (= ${Source-Version}), libxml2 (>= 2.5.10)
@@ -56,7 +56,7 @@ Description: Query Object Framework - XML backend module
  Homepage: http://qof.sourceforge.net/
  
 Package: libqof-backend-sqlite0
-Priority: extra
+Priority: optional
 Section: libs
 Architecture: any
 Depends: libqof1 (= ${Source-Version}), libsqlite0
