--- a/qof/backend/Makefile.am
+++ b/qof/backend/Makefile.am
@@ -1,23 +1,3 @@
-#
-# FILE:
-# Makefile.am
-#
-# FUNCTION:
-# QOF backend builder
-#
-# HISTORY:
-# Created by Linas Vepstas <linas@linas.org> July 2004
-# Conditional DWI build: Neil Williams <linux@codehelp.co.uk>
-# QSF added: Neil Williams <linux@codehelp.co.uk> Dec 2004
-# QSQLite added: Neil Williams <linux@codehelp.co.uk> Aug 06
-
-# Make QSQLite optional, support omitting build XML if embedded.
-
-if BUILD_DWI
-DWIBE=dwi
-else
-DWIBE=
-endif
 
 if EMBEDDED
 XML=
@@ -37,6 +17,6 @@ else
 GDA=
 endif
 
-SUBDIRS = $(DWIBE) $(XML) $(SQLITE) $(GDA)
+SUBDIRS = $(XML) $(SQLITE) $(GDA)
 
-DIST_SUBDIRS =  dwi file sqlite gda
+DIST_SUBDIRS = dwi file sqlite gda
