Ensure doxy symlink is cleaned

--- a/qof/doc/Makefile.am
+++ b/qof/doc/Makefile.am
@@ -28,6 +28,7 @@ doc: doxygen.cfg Makefile
 
 clean-local:
 	${RM} doxygen.log
+	if test -h ../website/doxy; then rm ../website/doxy; fi
 
 qofdocdir = ${docdir}/qof/html/doxy
 
