Stalling libqof-backend-gda until libgda can support creating tables

--- a/qof/backend/Makefile.am
+++ b/qof/backend/Makefile.am
@@ -11,12 +11,13 @@ endif
 XML=file
 endif
 
-if USE_LIBGDA
-GDA=gda
-else
-GDA=
-endif
+#if USE_LIBGDA
+#GDA=gda
+#else
+#GDA=
+#endif
 
 SUBDIRS = $(XML) $(SQLITE) $(GDA)
 
-DIST_SUBDIRS = dwi file sqlite gda
+#DIST_SUBDIRS = dwi file sqlite gda
+DIST_SUBDIRS = dwi file sqlite
