--- a/qof/debian/control
+++ b/qof/debian/control
@@ -3,7 +3,7 @@ Section: libs
 Priority: optional
 Maintainer: Debian QOF packaging team <pkg-qof-maintainers@lists.alioth.debian.org>
 Uploaders: Goedson Teixeira Paixao <goedson@debian.org>, Neil Williams <linux@codehelp.co.uk>
-Build-Depends: debhelper (>= 5), cdbs, autotools-dev, libglib2.0-dev, libxml2-dev (>= 2.5.10), libgda2-dev, libxml-parser-perl, doxygen, libsqlite0-dev
+Build-Depends: debhelper (>= 5), cdbs, autotools-dev, libglib2.0-dev (>= 2.6.0), libxml2-dev (>= 2.5.10), libgda2-dev, libxml-parser-perl, doxygen, libsqlite0-dev
 Standards-Version: 3.7.2
 
 Package: libqof-dev
@@ -27,6 +27,7 @@ Section: libs
 Architecture: any
 Depends: ${shlibs:Depends}
 Recommends: libqof-backend-qsf0 | libqof-backend-sqlite0
+Conflicts: pilot-qof (<< 0.1.1-2)
 Description: Query Object Framework
  A framework to allow the execution of SQL-type queries
  using collections of in-memory objects as 'tables'.
@@ -49,7 +50,7 @@ Description: Query Object Framework - XML backend module
  .
  This module provides the default XML backend for libqof1
  using a generic XML format called QSF. Any QOF object can
- be written out or loaded from QSF XML and. Data can be
+ be written out or loaded from QSF XML. Data can be
  converted to other text-based formats using XSL.
  This package provides the XML schemas to validate files 
  and the QSF XML backend module.
@@ -66,9 +67,9 @@ Description: Query Object Framework - SQLite backend module
  queries using collections of in-memory objects as 'tables'.
  .
  This module provides a SQLite backend intended for
- embedded systems where the size of the QSF XML backend
- is a problem. The package can also be installed alongside 
- the default QSF XML backend.
+ embedded systems where the size of libxml2 for the QSF XML 
+ backend is a problem. The package can also be installed 
+ alongside the default QSF XML backend.
  .
  Homepage: http://qof.sourceforge.net/
 
