--- a/qof/debian/control
+++ b/qof/debian/control
@@ -92,7 +92,7 @@ Package: libqof-doc
 Priority: optional
 Section: doc
 Architecture: all
-Recommends: firefox|www-browser, dwww
+Recommends: www-browser, dwww
 Description: Query Object Framework - API Documentation
  A framework to allow the execution of SQL-type queries
  using collections of in-memory objects as tables.
