--- a/qof/configure.in
+++ b/qof/configure.in
@@ -169,7 +169,7 @@ dnl *******************************
 dnl Internationalization
 dnl *******************************
 
-ALL_LINGUAS="en_GB sv vi ro id "
+ALL_LINGUAS="en_GB sv vi ro id pt_BR "
 GETTEXT_PACKAGE=qof
 AC_SUBST(GETTEXT_PACKAGE)
 AM_GLIB_GNU_GETTEXT
