--- a/qof/configure.in
+++ b/qof/configure.in
@@ -30,7 +30,7 @@ AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
 AC_PROG_LIBTOOL
 AM_CONFIG_HEADER(config.h)
 
-AM_MAINTAINER_MODE
+dnl AM_MAINTAINER_MODE
 
 AC_ISC_POSIX
 AC_PROG_CXX
@@ -173,6 +173,7 @@ ALL_LINGUAS="en_GB sv vi ro id pt_BR "
 GETTEXT_PACKAGE=qof
 AC_SUBST(GETTEXT_PACKAGE)
 AM_GLIB_GNU_GETTEXT
+AC_SUBST(ALL_LINGUAS)
 AC_SUBST(INTLTOOL_XGETTEXT)
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"], [gettext domain])
 
