--- a/qof/debian/control
+++ b/qof/debian/control
@@ -41,7 +41,7 @@ Package: libqof-backend-qsf0
 Priority: optional
 Section: libs
 Architecture: any
-Depends: libqof1 (= ${binary:Version}), libxml2 (>= 2.5.10)
+Depends: libqof1 (= ${binary:Version}), libglib2.0 (>= 2.6.0), libxml2 (>= 2.5.10)
 Recommends: xsltproc, xml-core
 Replaces: libqof1 (<= 0.7.0-2), libqof-backend-sqlite0
 Description: Query Object Framework - XML backend module
@@ -61,7 +61,7 @@ Package: libqof-backend-sqlite0
 Priority: optional
 Section: libs
 Architecture: any
-Depends: libqof1 (= ${binary:Version}), libsqlite0
+Depends: libqof1 (= ${binary:Version}), libglib2.0 (>= 2.6.0), libsqlite0
 Description: Query Object Framework - SQLite backend module
  QOF is a framework to allow the execution of SQL-type 
  queries using collections of in-memory objects as 'tables'.
