--- a/qof/debian/control
+++ b/qof/debian/control
@@ -3,7 +3,9 @@ Section: libs
 Priority: optional
 Maintainer: Debian QOF packaging team <pkg-qof-maintainers@lists.alioth.debian.org>
 Uploaders: Goedson Teixeira Paixao <goedson@debian.org>, Neil Williams <codehelp@debian.org>
-Build-Depends: debhelper (>= 5), cdbs, autotools-dev, libglib2.0-dev (>= 2.6.0), libxml2-dev (>= 2.5.10), libgda2-dev, libxml-parser-perl, doxygen, libsqlite0-dev, dpkg-dev (>= 1.13.19)
+Build-Depends: debhelper (>= 5), cdbs, autotools-dev, libglib2.0-dev (>= 2.6.0),
+ libxml2-dev (>= 2.5.10), libgda2-dev, doxygen,
+ libxml-parser-perl, libsqlite0-dev, dpkg-dev (>= 1.13.19)
 Standards-Version: 3.7.2
 
 Package: libqof-dev
@@ -67,8 +69,7 @@ Description: Query Object Framework - SQLite backend module
  queries using collections of in-memory objects as 'tables'.
  .
  This module provides a SQLite backend intended for
- embedded systems where the size of libxml2 for the QSF XML 
- backend is a problem. The package can also be installed 
+ embedded systems. The package can also be installed 
  alongside the default QSF XML backend.
  .
  Homepage: http://qof.sourceforge.net/
