tweak default prefix

--- a/qof/configure.in
+++ b/qof/configure.in
@@ -21,6 +21,7 @@ AC_SUBST(LIBQOF_BACKEND_QSF_LIBRARY_VERSION)
 AC_SUBST(LIBQOF_BACKEND_QSQL_VERSION)
 AC_SUBST(LIBQOF_BACKEND_QGDA_VERSION)
 
+AC_PREFIX([/usr])
 VERSION=AC_PACKAGE_VERSION
 AC_SUBST(VERSION)
 PACKAGE=AC_PACKAGE_NAME
