--- a/qof/configure.in
+++ b/qof/configure.in
@@ -5,13 +5,14 @@ dnl ******************************
 dnl Initialise
 dnl ******************************
 
-AC_INIT(qof, 0.7.3, 
+AC_INIT(qof, 0.7.3,
 	http://lists.sourceforge.net/lists/listinfo/qof-devel)
 
 AC_PREREQ(2.53)
 AC_GNU_SOURCE
 
 LIBQOF_LIBRARY_VERSION=1:9:0
+LIBQOFSQL_LIBRARY_VERSION=1:1:0
 LIBQOF_BACKEND_QSF_LIBRARY_VERSION=0:7:0
 LIBQOF_BACKEND_QSQL_VERSION=0:2:0
 LIBQOF_BACKEND_QGDA_VERSION=0:0:0
@@ -20,6 +21,7 @@ AC_SUBST(LIBQOF_LIBRARY_VERSION)
 AC_SUBST(LIBQOF_BACKEND_QSF_LIBRARY_VERSION)
 AC_SUBST(LIBQOF_BACKEND_QSQL_VERSION)
 AC_SUBST(LIBQOF_BACKEND_QGDA_VERSION)
+AC_SUBST(LIBQOFSQL_LIBRARY_VERSION)
 
 AC_PREFIX([/usr])
 VERSION=AC_PACKAGE_VERSION
@@ -112,37 +114,6 @@ case $host_os in
 esac
 
 dnl **************************************************************
-dnl  GNOME Data Access library for GNOME2 libgda
-dnl  Enables use of gda within libqof1 *and* the gda backend.
-dnl **************************************************************
-
-GDA_REQUIRED=1.2.0
-AC_MSG_CHECKING(for GDA)
-LIBGDA_CFLAGS=`$PKG_CONFIG --silence-errors --cflags "libgda >= $GDA_REQUIRED"`
-LIBGDA_LIBS=`$PKG_CONFIG --silence-errors --libs "libgda >= $GDA_REQUIRED"`
-AC_SUBST(LIBGDA_CFLAGS)
-AC_SUBST(LIBGDA_LIBS)
-if test "x$LIBGDA_LIBS" = x; then
-  AC_MSG_RESULT([No, GDA not found; will build using internal SQL library.])
-	LIBQOFSQL_LIBRARY_VERSION=1:1:0
-	SQL_PKG_LIB="-lqofsql"
-	AC_SUBST(LIBQOFSQL_LIBRARY_VERSION)
-else
-    GDA_VERSION=`$PKG_CONFIG --modversion libgda`
-    AC_MSG_RESULT([yes, using GDA: ${GDA_VERSION}])
-    AC_DEFINE(HAVE_GDA,,[We have found GDA])
-	GDA_PKG_LIB="-lgda-2"
-    HAVE_GDA="use_gda"
-	AC_SUBST(GDA_VERSION)
-fi
-
-AM_CONDITIONAL(USE_LIBGDA, [ test x"$HAVE_GDA" != x])
-AM_CONDITIONAL(USE_LIBGDA, [ test "$HAVE_GDA" = "use_gda"])
-AC_SUBST(USE_LIBGDA)
-AC_SUBST(GDA_PKG_LIB)
-AC_SUBST(SQL_PKG_LIB)
-
-dnl **************************************************************
 dnl Checks for typedefs, structures, and compiler characteristics.
 dnl **************************************************************
 
@@ -176,7 +147,7 @@ AC_SUBST(INTLTOOL_XGETTEXT)
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"], [gettext domain])
 
 dnl ********************************
-dnl Auto-disable deprecated glib 
+dnl Auto-disable deprecated glib
 dnl ********************************
 
 AC_ARG_ENABLE(deprecated-glib,
@@ -196,10 +167,10 @@ dnl libxml2 v2.5.10 is required for QSF (backend/file)
 dnl **************************************************************
 
 AC_ARG_ENABLE(embedded,
-  [  --enable-embedded         Enable the SQLite backend for embedded systems
+	[  --enable-embedded         Enable the SQLite backend for embedded systems
                           and DISABLE the QSF XML backend. (no)],
-  [case "${enableval}" in
-  		no) embedded="no" ;;
+	[case "${enableval}" in
+		no) embedded="no" ;;
 		yes) embedded="yes" ;;
 		*) AC_MSG_ERROR(bad value ${enableval} for --enable-embedded) ;;
 		esac])
@@ -240,6 +211,38 @@ if test "$embedded" != "yes"; then
 fi
 
 AM_CONDITIONAL(USE_SQLITE, [test "$sqlite" = "yes"])
+
+dnl **************************************************************
+dnl  GNOME Data Access library for GNOME2 libgda
+dnl  Enables use of gda within libqof1 *and* the gda backend.
+dnl  Automatically disabled in embedded mode to support removal of xml
+dnl **************************************************************
+
+AC_MSG_CHECKING(for SQL parser support)
+if test "$embedded" != "yes"; then
+	GDA_REQUIRED=1.2.0
+	LIBGDA_CFLAGS=`$PKG_CONFIG --silence-errors --cflags "libgda >= $GDA_REQUIRED"`
+	LIBGDA_LIBS=`$PKG_CONFIG --silence-errors --libs "libgda >= $GDA_REQUIRED"`
+	AC_SUBST(LIBGDA_CFLAGS)
+	AC_SUBST(LIBGDA_LIBS)
+fi
+if test "x$LIBGDA_LIBS" = x; then
+	AC_MSG_RESULT([GDA not found (or disabled); will build using internal SQL library.])
+	SQL_PKG_LIB="-lqofsql"
+else
+    GDA_VERSION=`$PKG_CONFIG --modversion libgda`
+    AC_MSG_RESULT([yes, using GDA: ${GDA_VERSION}])
+    AC_DEFINE(HAVE_GDA,,[We have found GDA])
+	GDA_PKG_LIB="-lgda-2"
+    HAVE_GDA="use_gda"
+	AC_SUBST(GDA_VERSION)
+fi
+
+AM_CONDITIONAL(USE_LIBGDA, [ test x"$HAVE_GDA" != x])
+AM_CONDITIONAL(USE_LIBGDA, [ test "$HAVE_GDA" = "use_gda"])
+AC_SUBST(USE_LIBGDA)
+AC_SUBST(GDA_PKG_LIB)
+AC_SUBST(SQL_PKG_LIB)
 
 dnl **************************************************************
 dnl DWI is now unsupported.
@@ -283,6 +286,10 @@ AC_ARG_ENABLE(doxygen, [  --enable-doxygen        enable documentation generatio
 AC_ARG_ENABLE(dot, [  --enable-dot            use 'dot' to generate graphs in doxygen (auto)])
 AC_ARG_ENABLE(html-docs, [  --enable-html-docs      enable HTML generation with doxygen (yes)], [], [ enable_html_docs=yes])
 AC_ARG_ENABLE(latex-docs, [  --enable-latex-docs     enable LaTeX documentation generation with doxygen (no)], [], [ enable_latex_docs=no])
+if test "$embedded" = "yes"; then
+	enable_doxygen=no
+	enable_doc=no
+fi
 if test "x$enable_doxygen" = xno; then
         enable_doc=no
 else
@@ -325,7 +332,7 @@ if test ${GCC}x = yesx; then
   warnFLAGS=
   CFLAGS="${CFLAGS} -g2 -Wall"
   AC_ARG_ENABLE(error-on-warning,
-        [  --disable-error-on-warning    
+        [  --disable-error-on-warning
                           disable treating compile warnings as errors],
         [case "${enableval}" in
         yes) warnFLAGS="${warnFLAGS} -Werror" ;;
@@ -393,7 +400,7 @@ dnl ******************************
 dnl Check if this was CVS source
 dnl ******************************
 if test -f "${srcdir}/README.cvs" ; then
-	AC_DEFINE([TEST_DEBUG],1, 
+	AC_DEFINE([TEST_DEBUG],1,
 		[Run test code in debug mode])
 	QOF_FROM_CVS=yes
 fi
