--- a/qof/configure.in
+++ b/qof/configure.in
@@ -167,7 +167,7 @@ dnl libxml2 v2.5.10 is required for QSF (backend/file)
 dnl **************************************************************
 
 AC_ARG_ENABLE(embedded,
-	[  --enable-embedded         Enable the SQLite backend for embedded systems
+	[  --enable-embedded       Enable the SQLite backend for embedded systems
                           and DISABLE the QSF XML backend. (no)],
 	[case "${enableval}" in
 		no) embedded="no" ;;
@@ -191,13 +191,13 @@ fi
 
 AM_CONDITIONAL(EMBEDDED, [test "$embedded" = "yes"])
 
+sqlite="yes"
 AC_ARG_ENABLE(sqlite,
-  [  --enable-sqlite           Enable the SQLite backend module
-                          alongside the QSF XML backend. (no)],
+  [  --disable-sqlite        Disable the SQLite backend module.],
   [case "${enableval}" in
   		no) sqlite="no" ;;
 		yes) sqlite="yes" ;;
-		*) AC_MSG_ERROR(bad value ${enableval} for --enable-sqlite) ;;
+		*) AC_MSG_ERROR(bad value ${enableval} for --disable-sqlite) ;;
 		esac])
 
 if test "$embedded" != "yes"; then
