--- a/qof/debian/control
+++ b/qof/debian/control
@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian QOF packaging team <pkg-qof-maintainers@lists.alioth.debian.org>
 Uploaders: Goedson Teixeira Paixao <goedson@debian.org>, Neil Williams <codehelp@debian.org>
 Build-Depends: debhelper (>= 5), cdbs, autotools-dev, libglib2.0-dev (>= 2.6.0),
- libxml2-dev (>= 2.5.10), libgda2-dev, libxml-parser-perl, libsqlite0-dev, dpkg-dev (>= 1.14)
+ libxml2-dev (>= 2.5.10), libgda2-dev, gettext, libsqlite0-dev, dpkg-dev (>= 1.14)
 Build-Depends-Indep: doxygen
 Standards-Version: 3.7.2
 Homepage: http://qof.sourceforge.net/
