Build library before backends.

--- a/qof/Makefile.am
+++ b/qof/Makefile.am
@@ -1,6 +1,6 @@
-SUBDIRS = lib backend qof . po doc
+SUBDIRS = lib qof . backend po doc
 
-DIST_SUBDIRS = lib backend qof . po doc
+DIST_SUBDIRS = lib qof . backend po doc
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = qof-1.pc
