Link in the built QOF library

--- a/qof/backend/file/Makefile.am
+++ b/qof/backend/file/Makefile.am
@@ -16,9 +16,11 @@ libqof_backend_qsf_la_SOURCES = \
   qsf-xml.c
 
 libqof_backend_qsf_la_LDFLAGS = \
+ -L${top_srcdir}/qof \
  -version-info $(LIBQOF_BACKEND_QSF_LIBRARY_VERSION)
 
 libqof_backend_qsf_la_LIBADD = \
+  ${QOF_LIBS} \
   ${LIBXML2_LIBS} \
   ${GLIB_LIBS}
 
