Link in the built QOF library and qofsql library (if any)

--- a/qof/backend/sqlite/Makefile.am
+++ b/qof/backend/sqlite/Makefile.am
@@ -12,9 +12,12 @@ libqof_backend_sqlite_la_SOURCES = \
  qof-sqlite.c
 
 libqof_backend_sqlite_la_LDFLAGS = \
+ -L${top_srcdir}/qof \
+ -L${top_srcdir}/lib/libsql \
  -version-info $(LIBQOF_BACKEND_QSQL_VERSION)
 
 libqof_backend_sqlite_la_LIBADD = \
+ ${QOF_LIBS} \
  ${GLIB_LIBS} \
  ${SQLITE_LIBS}
 
