--- a/qof/configure.in
+++ b/qof/configure.in
@@ -66,8 +66,8 @@ AC_SUBST(GMODULE_LIBS)
 AC_MSG_CHECKING(for GLIB - version >= 2.9.0)
 if $PKG_CONFIG 'glib-2.0 >= 2.9.0'
 then
-  AC_MSG_RESULT(yes)
-  AC_DEFINE(HAVE_GLIB29,1,[System has glib 2.9.0 or better])
+	AC_MSG_RESULT(yes)
+	AC_DEFINE(HAVE_GLIB29,1,[System has glib 2.9.0 or better])
 	HAVE_GLIB29=yes
 else
 	AC_MSG_RESULT(no)
@@ -79,10 +79,10 @@ dnl ********************************
 
 AC_ARG_ENABLE(deprecated-qof,
   [  --disable-deprecated-qof
-                          don't use deprecated QOF functions],
+                          Do not use deprecated QOF functions],
   [case "${enableval}" in
         no) AC_DEFINE(QOF_DISABLE_DEPRECATED,1,
-          [Don't use deprecated QOF functions]) ;;
+          [Do not use deprecated QOF functions]) ;;
         yes) ;;
         *) AC_MSG_ERROR(bad value ${enableval} for --enable-deprecated-qof) ;;
         esac])
@@ -147,10 +147,10 @@ dnl ********************************
 
 AC_ARG_ENABLE(deprecated-glib,
   [  --disable-deprecated-glib
-                          don't use deprecated glib functions],
+                          Do not use deprecated glib functions],
   [case "${enableval}" in
         no) AC_DEFINE(G_DISABLE_DEPRECATED,1,
-          [Don't use deprecated glib functions]) ;;
+          [Do not use deprecated glib functions]) ;;
         yes) ;;
         *) AC_MSG_ERROR(bad value ${enableval} for --enable-deprecated-glib) ;;
         esac])
@@ -164,7 +164,7 @@ dnl **************************************************************
 
 AC_ARG_ENABLE(embedded,
 	[  --enable-embedded       Enable the SQLite backend for embedded systems
-                          and DISABLE the QSF XML backend. (no)],
+                          and DISABLE libgdasql and the QSF XML backend. (no)],
 	[case "${enableval}" in
 		no) embedded="no" ;;
 		yes) embedded="yes" ;;
@@ -213,31 +213,43 @@ dnl  GNOME Data Access library for GNOME2 libgda
 dnl  Enables use of gdasql within libqof1 *and* the gda backend.
 dnl **************************************************************
 
-AC_MSG_CHECKING(for SQL parser support)
 if test "$embedded" != "yes"; then
-#	GDA_REQUIRED=1.2.0
-	GDA_REQUIRED=3.0.1
-#	LIBGDA_CFLAGS=`$PKG_CONFIG --silence-errors --cflags "libgda >= $GDA_REQUIRED"`
-#	LIBGDA_LIBS=`$PKG_CONFIG --silence-errors --libs "libgda >= $GDA_REQUIRED"`
-	LIBGDA_CFLAGS=`$PKG_CONFIG --silence-errors --cflags "libgda-3.0 >= $GDA_REQUIRED"`
-	LIBGDA_LIBS=`$PKG_CONFIG --silence-errors --libs "libgda-3.0 >= $GDA_REQUIRED"`
-	# LIBGDA should only be used for the GDA backend
-	AC_SUBST(LIBGDA_CFLAGS)
-	AC_SUBST(LIBGDA_LIBS)
+	usegdasql="yes"
+else
+	usegdasql="no"
+fi
+AC_ARG_ENABLE(gdasql,
+  [  --disable-gdasql        Disable the use of libgdasql.],
+  [case "${enableval}" in
+		no) usegdasql="no" ;;
+		yes) usegdasql="yes" ;;
+		*) AC_MSG_ERROR(bad value ${enableval} for --disable-gda) ;;
+		esac])
+
+if test "$usegdasql" = "yes"; then
+	AC_MSG_CHECKING(for SQL parser support)
+	if test "$embedded" != "yes"; then
+		GDA_REQUIRED=3.0.1
+		LIBGDA_CFLAGS=`$PKG_CONFIG --silence-errors --cflags "libgda-3.0 >= $GDA_REQUIRED"`
+		LIBGDA_LIBS=`$PKG_CONFIG --silence-errors --libs "libgda-3.0 >= $GDA_REQUIRED"`
+		# LIBGDA should only be used for the GDA backend
+		AC_SUBST(LIBGDA_CFLAGS)
+		AC_SUBST(LIBGDA_LIBS)
+	fi
 fi
 if test "x$LIBGDA_LIBS" = x; then
 	AC_MSG_RESULT([GDA not found (or disabled); will build using internal SQL library.])
 	SQL_PKG_LIB="-lqofsql"
 else
-    GDA_VERSION=`$PKG_CONFIG --modversion libgda-3.0`
-    AC_MSG_RESULT([yes, using GDA: ${GDA_VERSION}])
-    AC_MSG_CHECKING(for libgdasql-3.0 support)
-    save_LIBS="$LIBS"
-    AC_CHECK_LIB(gdasql-3.0, sql_parse, , [AC_MSG_ERROR([libgda3-3 found but missing libgdasql-3.0])])
-    AC_DEFINE(HAVE_GDA,,[We have found GDA])
+	GDA_VERSION=`$PKG_CONFIG --modversion libgda-3.0`
+	AC_MSG_RESULT([yes, using GDA: ${GDA_VERSION}])
+	AC_MSG_CHECKING(for libgdasql-3.0 support)
+	save_LIBS="$LIBS"
+	AC_CHECK_LIB(gdasql-3.0, sql_parse, , [AC_MSG_ERROR([libgda3-3 found but missing libgdasql-3.0])])
+	AC_DEFINE(HAVE_GDA,,[We have found GDA])
 	GDA_PKG_LIB="-lgdasql-3.0"
-    LIBS="$save_LIBS"
-    HAVE_GDA="use_gda"
+	LIBS="$save_LIBS"
+	HAVE_GDA="use_gda"
 	AC_SUBST(GDA_VERSION)
 fi
 
@@ -254,32 +266,8 @@ dnl but will be removed in libqof2.
 dnl **************************************************************
 
 dnl =========================
-dnl Perl
+dnl Perl - no longer needed
 dnl =========================
-# Check for perl, force version 5
-AC_ARG_WITH(perl,
-  [  --with-perl=FILE        which perl executable to use ],
-  PERL="${with_perl}")
-
-# If the user didn't specify a perl, then go fetch.
-if test x"$PERL" = x;
-then
-  AC_PATH_PROG(PERL, perl)
-fi
-
-# Make sure Perl was found
-if test x"$PERL" = x; then
-    AC_MSG_ERROR([Cannot find Perl. Try using the --with-perl flag.])
-fi
-
-# Make sure it's version 5 or later
-if "$PERL" -e 'exit 1 if $] < 5.0'; then
-        :
-else
-    AC_MSG_ERROR([Found ${PERL} reports version ]
-                 [`${PERL} -e 'print $]'`, need version 5.*])
-fi
-AC_SUBST(PERL)
 
 # check for doxygen, mostly stolen from http://log4cpp.sourceforge.net/
 # ------------------------------------------------------------------
@@ -388,11 +376,7 @@ BACKEND_SCHEMA_DIR=`eval echo $DATADIR`"/xml/qof/"
 AC_SUBST(BACKEND_SCHEMA_DIR)
 
 QOF_CFLAGS="-I$includedir/qof"
-if test x$HAVE_GDA != x; then
 QOF_LIBS="-lqof"
-else
-QOF_LIBS="-lqof -lqofsql"
-fi
 QOF_LIBDEPS="$LDFLAGS"
 QOF_VERSION="$VERSION"
 
@@ -444,6 +428,8 @@ echo "DWI_LIBS    :   $DWI_LIBS"
 echo "1st backend :   $backend"
 echo "2nd backend :   $backend2"
 echo "libgda      :   $GDA_VERSION"
+echo "libgdasql   :   $GDA_PKG_LIB"
+echo "libqofsql   :   $SQL_PKG_LIB"
 echo "prefix      :   $prefix"
 echo "data dir    :   "`eval echo $DATADIR`
 echo "XML dir     :   "`eval echo $QSF_SCHEMA_DIR`
