Rationalise the SQL_PKG_LIB support in libqof1 and the test suite

--- a/qof/qof/test/Makefile.am
+++ b/qof/qof/test/Makefile.am
@@ -16,10 +16,10 @@ LDADD = \
 else
 LDADD = \
    ${top_builddir}/qof/libqof.la \
-   ${top_builddir}/lib/libsql/libqofsql.la \
    ${GLIB_LIBS} \
    ${GMODULE_LIBS} \
-   ${GOBJECT_LIBS}
+   ${GOBJECT_LIBS} \
+   ${SQL_PKG_LIB}
 endif
 
 #   ${LIBXML2_LIBS} 
