--- a/qof/configure.in
+++ b/qof/configure.in
@@ -213,6 +213,9 @@ dnl  GNOME Data Access library for GNOME2 libgda
 dnl  Enables use of gdasql within libqof1 *and* the gda backend.
 dnl **************************************************************
 
+dnl Not ready yet.
+usegdabackend="no"
+backend3="Disabled (default)"
 if test "$embedded" != "yes"; then
 	usegdasql="yes"
 else
@@ -241,6 +244,13 @@ if test "x$LIBGDA_LIBS" = x; then
 	AC_MSG_RESULT([GDA not found (or disabled); will build using internal SQL library.])
 	SQL_PKG_LIB="-lqofsql"
 else
+	AC_ARG_ENABLE(gdabackend,
+	  [  --enable-gdabackend   Enable the use of the gda backend (off).],
+	  [case "${enableval}" in
+			no) usegdabackend="no" ;;
+			yes) usegdabackend="yes" ;;
+			*) AC_MSG_ERROR(bad value ${enableval} for --enable-gdabackend) ;;
+			esac])
 	GDA_VERSION=`$PKG_CONFIG --modversion libgda-3.0`
 	AC_MSG_RESULT([yes, using GDA: ${GDA_VERSION}])
 	AC_MSG_CHECKING(for libgdasql-3.0 support)
@@ -251,7 +261,12 @@ else
 	LIBS="$save_LIBS"
 	HAVE_GDA="use_gda"
 	AC_SUBST(GDA_VERSION)
+	if test "$usegdabackend" = "yes"; then
+		backend3="Enabled"
+	fi
 fi
+
+AM_CONDITIONAL(USE_GDABACKEND, [ test x"$usegdabackend" != x"no"])
 
 AM_CONDITIONAL(USE_LIBGDA, [ test x"$HAVE_GDA" != x])
 AM_CONDITIONAL(USE_LIBGDA, [ test "$HAVE_GDA" = "use_gda"])
@@ -399,6 +414,7 @@ Makefile
 backend/Makefile
 backend/dwi/Makefile
 backend/file/Makefile
+backend/gda/Makefile
 backend/file/qsf-dir.h
 backend/sqlite/Makefile
 doc/Makefile
@@ -410,6 +426,7 @@ qof/Makefile
 qof/qofla-dir.h
 qof/test/Makefile
 qof-1.pc
+qof.pc
 ])
 
 dnl <= Configuration summary =>
@@ -427,6 +444,7 @@ echo "QOF_LIBS    :   $QOF_LIBS"
 echo "DWI_LIBS    :   $DWI_LIBS"
 echo "1st backend :   $backend"
 echo "2nd backend :   $backend2"
+echo "GDA backend :   $backend3"
 echo "libgda      :   $GDA_VERSION"
 echo "libgdasql   :   $GDA_PKG_LIB"
 echo "libqofsql   :   $SQL_PKG_LIB"
