package the new pkgconfig file for libqof2

--- a/qof/Makefile.am
+++ b/qof/Makefile.am
@@ -3,16 +3,17 @@ SUBDIRS = lib qof . backend po doc
 DIST_SUBDIRS = lib qof . backend po doc
 
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = qof-1.pc
+pkgconfig_DATA = qof-1.pc qof.pc
 
-pot: Makefile
-	${MAKE} -C po $(PACKAGE).pot
+#pot: Makefile
+#	${MAKE} -C po $(PACKAGE).pot
 
-all-local: pot
+#all-local: pot
 
 EXTRA_DIST = config.rpath m4/ChangeLog  \
   po/POTFILES.skip \
   qof-1.pc.in \
+  qof.pc.in \
   website/gobj-example.c.html \
   website/my-obj-example.c.html \
   website/sflogosm.png \
