add gda to POT files

--- a/qof/po/POTFILES.in
+++ b/qof/po/POTFILES.in
@@ -5,6 +5,7 @@ backend/dwi/qofmap.c
 backend/file/qsf-xml-map.c
 backend/file/qsf-xml.c
 backend/file/qsf-backend.c
+backend/gda/qof-gda.c
 backend/sqlite/qof-sqlite.c
 qof/test/test-book-merge.c
 qof/test/test-date.c
