Generate the symbols file for libqof1. Test for versioned symbol support and use --version-script.

--- a/qof/configure.in
+++ b/qof/configure.in
@@ -16,6 +16,8 @@ LIBQOF_BACKEND_QSF_LIBRARY_VERSION=0:7:0
 LIBQOF_BACKEND_QSQL_VERSION=0:2:0
 LIBQOF_BACKEND_QGDA_VERSION=0:0:0
 
+SONAME=`echo $LIBQOF_LIBRARY_VERSION | cut -d: -f1`
+AC_SUBST(SONAME)
 AC_SUBST(LIBQOF_LIBRARY_VERSION)
 AC_SUBST(LIBQOF_BACKEND_QSF_LIBRARY_VERSION)
 AC_SUBST(LIBQOF_BACKEND_QSQL_VERSION)
@@ -449,6 +451,7 @@ qof/qofla-dir.h
 qof/test/Makefile
 qof-1.pc
 qof.pc
+qof.symbols
 ])
 
 dnl # <= Configuration summary =>
