--- a/qof/Makefile.am
+++ b/qof/Makefile.am
@@ -5,7 +5,7 @@ DIST_SUBDIRS = lib qof . backend po doc
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = qof-1.pc qof.pc
 
-EXTRA_DIST = m4/ChangeLog  \
+EXTRA_DIST = config.rpath m4/ChangeLog  \
   po/POTFILES.skip \
   qof-1.pc.in \
   qof.pc.in \
