--- a/qof/configure.in
+++ b/qof/configure.in
@@ -84,7 +84,7 @@ dnl # platforms that support symbol versioning (BSDs?)
 
 AC_MSG_CHECKING(whether to implement symbol versioning)
 case $host_os in
-  *linux*)
+  *linux* | *freebsd*)
 	LINKER_SCRIPT="-Wl,--version-script=\$(srcdir)/libqof.ver"
 	AC_MSG_RESULT(yes)
 	;;
