--- a/qof/configure.in
+++ b/qof/configure.in
@@ -160,6 +160,7 @@ dnl # *******************************
 GETTEXT_PACKAGE=qof
 AC_SUBST(GETTEXT_PACKAGE)
 AM_GNU_GETTEXT([external])
+AM_GNU_GETTEXT_VERSION([0.17])
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"], [gettext domain])
 
 dnl # ********************************
@@ -254,7 +255,7 @@ AC_ARG_ENABLE(gdasql,
 if test "$usegdasql" = "yes"; then
     AC_MSG_CHECKING(for SQL parser support)
     if test "$embedded" != "yes"; then
-        GDA_REQUIRED=3.0.1
+        GDA_REQUIRED=3.0.2
         LIBGDA_CFLAGS=`$PKG_CONFIG --cflags "libgda-3.0 >= $GDA_REQUIRED"`
         LIBGDA_LIBS="-lgda-3.0"
         # LIBGDA should only be used for the GDA backend
